testcases/error/top_module_not_found.veryl
module SomeOtherName (
    a: input  logic<8>,
    b: output logic<8>,
) {
    assign b = a + 1;
}
